--- a/css/main.css
+++ b/css/main.css
@@ -421,7 +421,7 @@ body {
   margin: 0 auto;
   max-width: 1920px;
   background-color: #0b1d26;
-  background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("../../images/bg-man.png"), url("../../images/MG.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("../../images/bg-sky.png");
+  background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("./../images/bg-man.png"), url("./../images/MG.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("./../images/bg-sky.png");
   background-size: 1920px 700px, 1920px, 1920px, 1920px, 1920px;
   background-position: 0 1200px, 0 768px, 0 464px, 0 0, 0 0;
   background-repeat: no-repeat;
@@ -453,10 +453,6 @@ a:focus {
   padding-left: 229px;
   padding-right: 229px;
   width: 1462px;
-}
-
-* {
-  outline: 1px solid red;
 }
 
 .logo {
