--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,4 @@
 @import './components/slider';
 @import './components/articles';
 @import './components/footer';
+@import './components/burger-menu';
