--- a/sass/components/_articles.scss
+++ b/sass/components/_articles.scss
@@ -1,17 +1,58 @@
 .articles {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom: 100px;
+  }
+  @media screen and (max-width: 767px) {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 100px;
+  }
+  @media screen and(min-width:1200px) {
+    margin-bottom: 200px;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   &__item {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     margin-bottom: 200px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    @media screen and (max-width: 767px) {
+      display: block;
+    }
   }
   &__post {
     position: relative;
-    width: 632px;
-    margin-right: 114px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: 470px;
+      margin-right: 50px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 632px;
+      margin-right: 114px;
+    }
+    @media screen and (max-width: 767px) {
+      max-width: 600px;
+      padding-right: 30px;
+    }
 
     .articles__item:nth-child(2) & {
-      margin-left: 264px;
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin-left: 180px;
+      }
+      @media screen and (min-width: 1200px) {
+        margin-left: 264px;
+      }
     }
   }
   &__number {
@@ -24,11 +65,21 @@
     font-size: 240px;
     line-height: 1;
 
-    opacity: 0.3;
+    opacity: 0.1;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      font-size: 170px;
+      left: -100px;
+    }
+    @media screen and (max-width: 767px) {
+      left: 0;
+    }
   }
   &__topic {
     @extend %little-orange-text;
     margin-bottom: 27px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 13px;
+    }
   }
   &__topic::before {
     content: '';
@@ -40,10 +91,13 @@
     vertical-align: super;
 
     background-color: $secondary-text-color;
+    @media screen and (max-width: 767px) {
+      width: 25px;
+      margin-right: 12px;
+    }
   }
 
   &__title {
-    max-width: 555px;
     margin-bottom: 27px;
 
     font-family: Chronicle Display;
@@ -52,6 +106,15 @@
     line-height: 1.2;
 
     color: $primary-text-color;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      font-size: 55px;
+    }
+    @media screen and (min-width: 768px) {
+      max-width: 555px;
+    }
+    @media screen and (max-width: 767px) {
+      font-size: 45px;
+    }
   }
 
   &__text {
@@ -70,6 +133,9 @@
     fill: currentColor;
   }
   &__image {
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
     .articles__item:nth-child(2) & {
       order: -1;
     }
