--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,17 +1,44 @@
 .footer {
   margin-bottom: 120px;
+  padding-right: 40px;
+  &__info {
+    @media screen and(min-width:1200px) {
+      margin-left: 150px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-left: 50px;
+    }
+    @media screen and (max-width: 767px) {
+      margin-left: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+  }
   &__container {
     display: flex;
+    @media screen and (min-width: 768px) {
+      justify-content: space-around;
+    }
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+    }
   }
   &__logo {
     display: inline-block;
+
     margin-bottom: 24px;
   }
   &__do-it {
     display: block;
-    width: 303px;
 
-    margin-bottom: 122px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 122px;
+      width: 303px;
+    }
   }
   &__copyright {
     display: block;
@@ -24,24 +51,64 @@
 }
 .more {
   display: flex;
-  margin-left: auto;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-right: 150px;
+  }
+  @media screen and(min-width:1200px) {
+    margin-right: 300px;
+  }
+  @media screen and (max-width: 767px) {
+    position: relative;
+    justify-content: space-around;
+
+    margin-bottom: 40px;
+    padding-top: 30px;
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 1px;
+
+      border-radius: 4px;
+      background-color: $primary-text-color;
+    }
+  }
   &__list {
     margin-top: 24px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-top: 12px;
+    }
   }
   &__block {
     & + & {
-      margin-left: 212px;
+      @media screen and(min-width:1200px) {
+        margin-left: 212px;
+      }
+
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin-left: 112px;
+      }
     }
   }
   &__title {
     font-size: 24px;
 
     color: $secondary-text-color;
+    @media screen and (max-width: 767px) {
+      font-size: 14px;
+    }
+  }
+  &__link {
+    font-size: 14px;
   }
   &__item {
     font-weight: 500;
     & + & {
       margin-top: 16px;
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin-top: 8px;
+      }
     }
   }
 }
