--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,43 +1,79 @@
-.logo {
-  font-family: Chronicle Display;
-  font-size: 32px;
-  line-height: 1.19;
-  text-transform: uppercase;
+.header {
+  margin-bottom: 350px;
 }
-
 .header-container {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   margin: 0 auto;
-  padding-left: 80px;
-  padding-right: 80px;
-  width: 1760px;
-  padding-top: 64px;
-  padding-bottom: 200px;
+  @media screen and (max-width: 767px) {
+    padding-left: 40px;
+    padding-right: 50px;
+    padding-top: 40px;
+    padding-bottom: 80px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 35px;
+    padding-bottom: 120px;
+  }
+  @media screen and(min-width:1200px) {
+    padding-top: 57px;
+    padding-bottom: 198px;
+  }
 }
 
 .navigation-menu {
-  display: flex;
+  @media screen and (max-width: 767px) {
+    padding-top: 85px;
+    text-align: center;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 
   &__item {
+    @media screen and (max-width: 767px) {
+      font-size: 25px;
+      margin-bottom: 25px;
+    }
     font-size: 18px;
     line-height: 1.22;
-
-    & + & {
-      margin-left: 40px;
+    @media screen and (min-width: 768px) {
+      & + & {
+        margin-left: 40px;
+      }
     }
   }
 }
 
 .logining {
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-left: 280px;
+  }
+  @media screen and(min-width:1200px) {
+    margin-left: 642px;
+  }
+
   &__icon {
+    @media screen and (max-width: 767px) {
+      margin-right: 4px;
+    }
     vertical-align: sub;
     margin-right: 8px;
     fill: currentColor;
   }
   &__btn {
+    @media screen and (max-width: 767px) {
+      font-size: 25px;
+      line-height: 2;
+    }
     padding: 0;
     margin: 0;
 
@@ -51,5 +87,55 @@
     line-height: 1.24;
 
     cursor: pointer;
+  }
+}
+
+.social {
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 210px;
+    left: 80px;
+  }
+
+  @media screen and(min-width:1200px) {
+    top: 359px;
+  }
+
+  &__link {
+    fill: currentColor;
+  }
+  &__text {
+    display: block;
+    @media screen and (max-width: 767px) {
+      text-align: center;
+      margin-top: 35px;
+    }
+    @media screen and (min-width: 768px) {
+      writing-mode: vertical-rl;
+    }
+  }
+  &__list {
+    margin-top: 24px;
+  }
+  &__item {
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
+
+    & + & {
+      @media screen and (max-width: 767px) {
+        margin-top: 10px;
+      }
+      margin-top: 24px;
+    }
+  }
+  &__icon {
+    @media screen and (max-width: 767px) {
+      width: 40px;
+      height: 40px;
+    }
   }
 }
