--- a/css/main.css
+++ b/css/main.css
@@ -493,8 +493,22 @@ a:focus {
   padding-right: 229px;
 }
 
-.header {
-  margin-bottom: 350px;
+@media screen and (max-width: 767px) {
+  .header {
+    margin-bottom: 350px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header {
+    margin-bottom: 550px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    margin-bottom: 844px;
+  }
 }
 
 .header-container {
