--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,13 @@
 .header {
-  margin-bottom: 350px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 350px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 550px;
+  }
+  @media screen and(min-width:1200px) {
+    margin-bottom: 844px;
+  }
 }
 .header-container {
   position: relative;
