убрал фикс width

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,3 +1,7 @@
+.logo {
+  flex-grow: 1;
+}
+
 .header {
   @media screen and (max-width: 767px) {
     margin-bottom: 350px;
@@ -62,12 +66,6 @@
   @media screen and (max-width: 767px) {
     text-align: center;
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    margin-left: 280px;
-  }
-  @media screen and(min-width:1200px) {
-    margin-left: 642px;
-  }
 
   &__icon {
     @media screen and (max-width: 767px) {
@@ -106,6 +104,7 @@
     align-items: center;
     top: 210px;
     left: 80px;
+    z-index: 1;
   }
 
   @media screen and(min-width:1200px) {
