--- a/css/main.css
+++ b/css/main.css
@@ -430,12 +430,14 @@ body {
 .wrapper {
   position: relative;
   margin: 0 auto;
+  overflow-x: hidden;
   background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
 }
 
 @media screen and (max-width: 767px) {
   .wrapper {
-    min-width: 350px;
     background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("./../images/bg-man768х370.png"), url("./../images/mountains768х569.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("./../images/bg-sky768х445.png");
     background-position: 0 330px, 0 250px, 0 120px, 0 0, 0 0;
     background-size: 767px 400px, 767px, 767px, 767px 400px, 767px;
@@ -444,7 +446,6 @@ body {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .wrapper {
-    width: 1200px;
     background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("./../images/bg-man1200х579.png"), url("./../images/mountains1200х889.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("./../images/bg-sky1200х696.png");
     background-position: 0 630px, 0 468px, 0 264px, 0 0, 0 0;
     background-size: 1200px 600px, 1200px, 1200px, 1200px 600px, 1200px;
@@ -453,10 +454,8 @@ body {
 
 @media screen and (min-width: 1200px) {
   .wrapper {
-    width: 1920px;
-    background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("./../images/bg-man.png"), url("./../images/mountains.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("./../images/bg-sky.png");
-    background-position: 0 1200px, 0 768px, 0 464px, 0 0, 0 0;
-    background-size: 1920px 700px, 1920px, 1920px, 1920px 1200px, 1920px;
+    background-image: url(./../../images/bg.jpg);
+    background-size: 1920px;
   }
 }
 
@@ -491,6 +490,12 @@ a:focus {
   margin: 0 auto;
   padding-left: 229px;
   padding-right: 229px;
+}
+
+.logo {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 @media screen and (max-width: 767px) {
@@ -589,18 +594,6 @@ a:focus {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .logining {
-    margin-left: 280px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .logining {
-    margin-left: 642px;
-  }
-}
-
 .logining__icon {
   vertical-align: sub;
   margin-right: 8px;
@@ -647,6 +640,7 @@ a:focus {
             align-items: center;
     top: 210px;
     left: 80px;
+    z-index: 1;
   }
 }
 
@@ -726,9 +720,21 @@ a:focus {
   }
 }
 
+@media screen and (min-width: 400px) and (max-width: 767px) {
+  .hero__content {
+    max-width: 336px;
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero__content {
     max-width: 530px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+  .hero__content {
+    max-width: 630px;
   }
 }
 
@@ -779,6 +785,12 @@ a:focus {
   .hero__text {
     font-size: 50px;
     margin-bottom: 13px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+  .hero__text {
+    font-size: 60px;
   }
 }
 
@@ -1316,9 +1328,15 @@ a:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 @media screen and (max-width: 767px) {
