--- a/sass/components/_burger-menu.scss
+++ b/sass/components/_burger-menu.scss
@@ -51,7 +51,9 @@
 
 .drop-menu {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  flex-grow: 1;
 
   @media screen and (max-width: 767px) {
     display: block;
