--- a/css/main.css
+++ b/css/main.css
@@ -438,6 +438,7 @@ body {
 
 @media screen and (max-width: 767px) {
   .wrapper {
+    max-width: 350px;
     background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("./../images/bg-man768х370.png"), url("./../images/mountains768х569.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("./../images/bg-sky768х445.png");
     background-position: 0 330px, 0 250px, 0 120px, 0 0, 0 0;
     background-size: 767px 400px, 767px, 767px, 767px 400px, 767px;
@@ -446,6 +447,7 @@ body {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .wrapper {
+    max-width: 1200px;
     background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("./../images/bg-man1200х579.png"), url("./../images/mountains1200х889.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("./../images/bg-sky1200х696.png");
     background-position: 0 630px, 0 468px, 0 264px, 0 0, 0 0;
     background-size: 1200px 600px, 1200px, 1200px, 1200px 600px, 1200px;
@@ -454,6 +456,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .wrapper {
+    max-width: 1920px;
     background-image: url(./../../images/bg.jpg);
     background-size: 1920px;
   }
