--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -69,7 +69,7 @@ body {
   @media screen and (min-width: 1200px) {
     // width: 1920px;
 
-    background-image: url(./../../images/bg.jpg);
+    background-image: url(./../images/bg.jpg);
     background-size: 1920px;
     // background-image: linear-gradient(
     //     180deg,
