--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -35,7 +35,7 @@ body {
   height: 100%;
   width: 100%;
   @media screen and (max-width: 767px) {
-    // min-width: 350px;
+    max-width: 350px;
     background-image: linear-gradient(
         180deg,
         rgba(11, 29, 38, 0) 0%,
@@ -51,7 +51,7 @@ body {
   }
 
   @media screen and(min-width:768px) and (max-width: 1199px) {
-    // width: 1200px;
+    max-width: 1200px;
     background-image: linear-gradient(
         180deg,
         rgba(11, 29, 38, 0) 0%,
@@ -67,7 +67,7 @@ body {
   }
 
   @media screen and (min-width: 1200px) {
-    // width: 1920px;
+    max-width: 1920px;
 
     background-image: url(./../images/bg.jpg);
     background-size: 1920px;
