--- a/css/main.css
+++ b/css/main.css
@@ -438,7 +438,7 @@ body {
   .wrapper {
     min-width: 350px;
     max-width: 767px;
-    background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("./../images/bg-man768х370.png"), url("./../images/mountains768х569.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("./../images/bg-sky768х445.png");
+    background-image: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%), url("./../images/bg-man768х370.png"), url("./../images/mountains768х569.png"), linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0b1d26 108.93%), url("./../images/bg-sky768х445.jpg");
     background-position: 0 330px, 0 250px, 0 120px, 0 0, 0 0;
     background-size: 767px 400px, 767px, 767px, 767px 400px, 767px;
   }
