--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -51,7 +51,7 @@
     font-weight: 600;
     font-size: 88px;
     line-height: 1.14;
-
+    text-transform: none;
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       font-size: 50px;
       margin-bottom: 13px;
