--- a/css/main.css
+++ b/css/main.css
@@ -921,7 +921,7 @@ a:focus {
 @media screen and (max-width: 767px) {
   .articles {
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 28px;
     margin-bottom: 100px;
   }
 }
@@ -1118,6 +1118,13 @@ a:focus {
 
 .footer {
   margin-bottom: 120px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    margin-right: 58px;
+    padding-left: 20px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
