--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,9 @@
 .footer {
   margin-bottom: 120px;
+  @media screen and (max-width: 767px) {
+    margin-right: 58px;
+    padding-left: 20px;
+  }
 
   &__info {
     @media screen and (min-width: 768px) and (max-width: 1199px) {
